Modifiche del giorno

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -2,12 +2,302 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Michele Costabile at 2011-01-13 23:27:43 +0100 
+%% Created for Michele Costabile at 2011-02-22 19:04:24 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{komano1996design,
+	Author = {Komano, Y. and others},
+	Date-Added = {2011-02-22 13:18:03 +0100},
+	Date-Modified = {2011-02-22 13:18:03 +0100},
+	Journal = {Proc. of ICONE-4, New Orleans},
+	Pages = {47--53},
+	Title = {Design Features for MOX Operation in APWR},
+	Volume = {2},
+	Year = {1996}}
+
+@article{suzuki2002design,
+	Author = {Suzuki, H.},
+	Date-Added = {2011-02-22 13:17:40 +0100},
+	Date-Modified = {2011-02-22 13:17:40 +0100},
+	Issn = {0029-5574},
+	Journal = {Nuclear News},
+	Number = {1},
+	Pages = {35--35},
+	Publisher = {AMERICAN NUCLEAR SOCIETY},
+	Title = {Design features of Tsuruga-3 and-4: The APWR plant in Japan},
+	Volume = {45},
+	Year = {2002}}
+
+@article{arnold1997esbwr,
+	Author = {Arnold, H. and Yadigaroglu, G. and Stoop, PM and Gonzales, A. and Sawyer, CD and Rao, A.},
+	Date-Added = {2011-02-22 11:35:08 +0100},
+	Date-Modified = {2011-02-22 11:35:08 +0100},
+	Issn = {0029-5507},
+	Journal = {Nuclear Engineering International},
+	Number = {511},
+	Pages = {3},
+	Title = {ESBWR-the latest passive BWR},
+	Volume = {42},
+	Year = {1997}}
+
+@misc{challberg1998esbwr,
+	Author = {Challberg, RC and others},
+	Date-Added = {2011-02-22 11:34:52 +0100},
+	Date-Modified = {2011-02-22 11:34:52 +0100},
+	Publisher = {May},
+	Title = {ESBWR Evolution of Passive Features, Proc. 6 th Intl. Conf. on Nuclear Engineering, ICONE-6},
+	Year = {1998}}
+
+@webpage{:esbwr-brochure,
+	Date-Added = {2011-02-22 11:04:23 +0100},
+	Date-Modified = {2011-02-22 11:05:14 +0100},
+	Lastchecked = {marted{\`\i} 22 febbraio 2011},
+	Title = {GE Energy- ESBWR},
+	Url = {http://www.gepower.com/prod_serv/products/nuclear_energy/en/new_reactors/esbwr.htm},
+	Bdsk-Url-1 = {http://www.gepower.com/prod_serv/products/nuclear_energy/en/new_reactors/esbwr.htm}}
+
+@webpage{:fk,
+	Date-Added = {2011-02-22 11:04:12 +0100},
+	Date-Modified = {2011-02-22 11:04:12 +0100},
+	Lastchecked = {marted{\`\i} 22 febbraio 2011},
+	Title = {http://www.ans.org/pubs/magazines/nn/docs/2006-1-3.pdf},
+	Bdsk-Url-1 = {http://www.ans.org/pubs/magazines/nn/docs/2006-1-3.pdf}}
+
+@webpage{:ap1000-georgia,
+	Date-Added = {2011-02-18 12:02:33 +0100},
+	Date-Modified = {2011-02-18 12:03:10 +0100},
+	Lastchecked = {venerd{\`\i} 18 febbraio 2011},
+	Month = {10},
+	Title = {Westinghouse wins first US nuclear deal in 30 years | Environment | The Guardian},
+	Url = {http://www.guardian.co.uk/world/2008/apr/10/nuclear.nuclearpower},
+	Year = {2008},
+	Bdsk-Url-1 = {http://www.guardian.co.uk/world/2008/apr/10/nuclear.nuclearpower}}
+
+@webpage{:nrc-applications,
+	Date-Added = {2011-02-18 11:44:54 +0100},
+	Date-Modified = {2011-02-18 11:46:24 +0100},
+	Lastchecked = {venerd{\`\i} 18 febbraio 2011},
+	Month = {09},
+	Read = {1},
+	Title = {NRC: Combined License Applications for New Reactors},
+	Url = {http://www.nrc.gov/reactors/new-reactors/col.html},
+	Year = {2010},
+	Bdsk-Url-1 = {http://www.nrc.gov/reactors/new-reactors/col.html}}
+
+@webpage{:china-nuclear-plans,
+	Date-Added = {2011-02-18 11:42:21 +0100},
+	Date-Modified = {2011-02-18 11:43:58 +0100},
+	Lastchecked = {venerd{\`\i} 18 febbraio 2011},
+	Month = {02},
+	Title = {China Nuclear Power | Chinese Nuclear Energy},
+	Url = {http://www.world-nuclear.org/info/inf63.html},
+	Year = {2011},
+	Bdsk-Url-1 = {http://www.world-nuclear.org/info/inf63.html}}
+
+@webpage{:ap100brochure,
+	Date-Added = {2011-02-17 13:08:05 +0100},
+	Date-Modified = {2011-02-17 13:09:13 +0100},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Month = {02},
+	Title = {AP1000 Brochure},
+	Url = {http://www.westinghousenuclear.com/docs/AP1000_brochure.pdf},
+	Year = {2010},
+	Bdsk-Url-1 = {http://www.westinghousenuclear.com/docs/AP1000_brochure.pdf}}
+
+@webpage{:ap100safety,
+	Date-Added = {2011-02-17 12:40:42 +0100},
+	Date-Modified = {2011-02-17 12:41:08 +0100},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Month = {02},
+	Title = {Westinghouse AP1000},
+	Url = {http://AP1000.westinghousenuclear.com/ap1000_safety.html},
+	Year = {2010},
+	Bdsk-Url-1 = {http://ap1000.westinghousenuclear.com/ap1000_safety.html}}
+
+@webpage{:ap1000constr,
+	Date-Added = {2011-02-17 12:36:38 +0100},
+	Date-Modified = {2011-02-17 12:37:09 +0100},
+	Keywords = {ap1000},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Month = {02},
+	Title = {Westinghouse AP1000},
+	Url = {http://AP1000.westinghousenuclear.com/ap1000_ec_mc.html},
+	Year = {2010},
+	Bdsk-Url-1 = {http://ap1000.westinghousenuclear.com/ap1000_ec_mc.html}}
+
+@webpage{:ap100cert,
+	Date-Added = {2011-02-17 12:20:50 +0100},
+	Date-Modified = {2011-02-17 12:21:51 +0100},
+	Keywords = {ap1000 certification},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Month = {01},
+	Rating = {0},
+	Read = {0},
+	Title = {NRC: Issued Design Certification - AP1000, Rev. 15},
+	Url = {http://www.nrc.gov/reactors/new-reactors/design-cert/ap1000.html},
+	Year = {2006},
+	Bdsk-Url-1 = {http://www.nrc.gov/reactors/new-reactors/design-cert/ap1000.html}}
+
+@webpage{:ap1000orders,
+	Date-Added = {2011-02-17 12:14:24 +0100},
+	Date-Modified = {2011-02-17 12:15:18 +0100},
+	Keywords = {toshiba ap1000},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Month = {may},
+	Title = {Toshiba expects 33 reactor orders by 2015},
+	Url = {http://www.world-nuclear-news.org/C-Toshiba_expects_33_reactor_orders_by_2015-2205083.html},
+	Year = {2008},
+	Bdsk-Url-1 = {http://www.world-nuclear-news.org/C-Toshiba_expects_33_reactor_orders_by_2015-2205083.html}}
+
+@webpage{:mox,
+	Date-Added = {2011-02-17 12:12:54 +0100},
+	Date-Modified = {2011-02-17 12:13:02 +0100},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Title = {MOX fuel - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/MOX_fuel}}
+
+@webpage{:ap1000glance,
+	Date-Added = {2011-02-17 12:08:58 +0100},
+	Date-Modified = {2011-02-17 12:35:29 +0100},
+	Keywords = {ap1000},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Month = {02},
+	Title = {Westinghouse AP1000},
+	Url = {http://AP1000.westinghousenuclear.com/ap1000_glance.html},
+	Year = {2010},
+	Bdsk-Url-1 = {http://ap1000.westinghousenuclear.com/ap1000_glance.html}}
+
+@webpage{:epritaly,
+	Date-Added = {2011-02-17 11:07:02 +0100},
+	Date-Modified = {2011-02-17 11:07:14 +0100},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Title = {EPR{\texttrademark} projects in Italy: AREVA is pleased with its customers' confidence},
+	Bdsk-Url-1 = {http://www.areva-np.com/scripts/press/publigen/content/templates/show.asp?P=1019&L=US}}
+
+@webpage{:eprindia,
+	Date-Added = {2011-02-17 11:05:26 +0100},
+	Date-Modified = {2011-02-17 11:05:39 +0100},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Title = {India: Agreements between AREVA and NPCIL for the supply of two EPR reactors and fuel for 25 years - AREVA},
+	Bdsk-Url-1 = {http://www.areva.com/EN/news-8633/india-agreements-between-areva-and-npcil-for-the-supply-of-two-epr-reactors-and-fuel-for-25-years.html}}
+
+@webpage{:eprfrance,
+	Date-Added = {2011-02-17 10:54:38 +0100},
+	Date-Modified = {2011-02-17 10:57:26 +0100},
+	Lastchecked = {gioved{\`\i} 17 febbraio 2011},
+	Title = {New French nuclear to include oil and gas interest},
+	Bdsk-Url-1 = {http://www.world-nuclear-news.org/newsarticle.aspx?id=24566}}
+
+@webpage{:ys,
+	Date-Added = {2011-02-16 18:16:08 +0100},
+	Date-Modified = {2011-02-16 18:16:46 +0100},
+	Lastchecked = {mercoled{\`\i} 16 febbraio 2011},
+	Title = {EPR Brochure for the U.S.},
+	Bdsk-Url-1 = {http://www.areva-np.com/us/liblocal/docs/EPR/U.S.EPRbrochure_1.07_FINAL.pdf}}
+
+@webpage{:m5,
+	Date-Added = {2011-02-16 13:42:52 +0100},
+	Date-Modified = {2011-02-16 13:43:01 +0100},
+	Lastchecked = {mercoled{\`\i} 16 febbraio 2011},
+	Title = {M5 Trademark Details},
+	Bdsk-Url-1 = {http://metals.zibb.com/trademark/m5/29625701}}
+
+@webpage{:gen3,
+	Date-Added = {2011-02-11 17:28:29 +0100},
+	Date-Modified = {2011-02-11 17:28:43 +0100},
+	Lastchecked = {venerd{\`\i} 11 febbraio 2011},
+	Title = {Advanced Nuclear Power Reactors | Generation III+ Nuclear Reactors},
+	Bdsk-Url-1 = {http://www.world-nuclear.org/info/inf08.html}}
+
+@webpage{:acr1000,
+	Date-Added = {2011-02-10 18:56:55 +0100},
+	Date-Modified = {2011-02-10 18:57:12 +0100},
+	Lastchecked = {gioved{\`\i} 10 febbraio 2011},
+	Title = {CANDU Reactors - ACR-1000},
+	Bdsk-Url-1 = {http://www.aecl.ca/Reactors/ACR-1000.htm}}
+
+@webpage{:ncs,
+	Date-Added = {2011-02-04 19:04:04 +0100},
+	Date-Modified = {2011-02-04 19:04:15 +0100},
+	Lastchecked = {venerd{\`\i} 4 febbraio 2011},
+	Title = {Neutron cross-sections 4.7.2},
+	Bdsk-Url-1 = {http://www.kayelaby.npl.co.uk/atomic_and_nuclear_physics/4_7/4_7_2.html}}
+
+@article{PhysRev.87.693,
+	Author = {Foldy, L. L.},
+	Date-Added = {2011-02-02 16:42:50 +0100},
+	Date-Modified = {2011-02-02 16:42:50 +0100},
+	Doi = {10.1103/PhysRev.87.693},
+	Journal = {Phys. Rev.},
+	Month = {Sep},
+	Number = {5},
+	Numpages = {3},
+	Pages = {693--696},
+	Publisher = {American Physical Society},
+	Title = {The Electron-Neutron Interaction},
+	Volume = {87},
+	Year = {1952},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRev.87.693}}
+
+@book{:pif,
+	Author = {Braibant, Sylvie, Giacomelli, Giorgio, Spurio, Maurizio},
+	Date-Added = {2011-02-02 15:52:42 +0100},
+	Date-Modified = {2011-02-02 15:55:34 +0100},
+	Edition = {1},
+	Number = {ISBN: 978-88-470-1160-1},
+	Publisher = {Springer},
+	Series = {UNITEXT},
+	Title = {Particelle e interazioni fondamentali},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.springer.com/physics/particle+and+nuclear+physics/book/978-88-470-1160-1?cm_mmc=Google-_-Book%20Search-_-Springer-_-0}}
+
+@webpage{:fsscr,
+	Date-Added = {2011-02-01 13:23:07 +0100},
+	Date-Modified = {2011-02-01 13:23:30 +0100},
+	Lastchecked = {marted{\`\i} 1 febbraio 2011},
+	Title = {Enrico Fermi and the First Self-Sustaining Nuclear Chain Reaction},
+	Bdsk-Url-1 = {http://www.osti.gov/accomplishments/fermi.html}}
+
+@webpage{:lsz,
+	Date-Added = {2011-02-01 12:52:00 +0100},
+	Date-Modified = {2011-02-01 12:53:21 +0100},
+	Lastchecked = {marted{\`\i} 1 febbraio 2011},
+	Title = {Lettera di Fermi a Szilard},
+	Url = {http://fermi.lib.uchicago.edu/letter_szilard.pdf},
+	Bdsk-Url-1 = {http://fermi.lib.uchicago.edu/letter_szilard.pdf}}
+
+@webpage{:uq,
+	Date-Added = {2011-02-01 10:04:36 +0100},
+	Date-Modified = {2011-02-01 10:04:36 +0100},
+	Lastchecked = {marted{\`\i} 1 febbraio 2011},
+	Title = {Out of Gas},
+	Bdsk-Url-1 = {http://eands.caltech.edu/articles/LXVI4/gas.html}}
+
+@webpage{:chr,
+	Date-Added = {2011-01-31 19:41:22 +0100},
+	Date-Modified = {2011-01-31 19:44:30 +0100},
+	Title = {La catastrofe di Chernobyl},
+	Url = {http://en.wikipedia.org/wiki/Chernobyl_disaster},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Chernobyl_disaster},
+	Bdsk-Url-2 = {http://eands.caltech.edu/articles/LXVI4/gas.html}}
+
+@webpage{:fy,
+	Date-Added = {2011-01-27 18:43:02 +0100},
+	Date-Modified = {2011-02-01 11:34:40 +0100},
+	Lastchecked = {gioved{\`\i} 27 gennaio 2011},
+	Title = {Enrico Fermi, La conferenza di accettazione del premio Nobel},
+	Bdsk-Url-1 = {http://nobelprize.org/nobel_prizes/physics/laureates/1938/fermi-lecture.pdf}}
+
+@webpage{:fj,
+	Date-Added = {2011-01-17 13:57:51 +0100},
+	Date-Modified = {2011-01-17 13:58:07 +0100},
+	Lastchecked = {luned{\`\i} 17 gennaio 2011},
+	Title = {WNA Reactor Database},
+	Bdsk-Url-1 = {http://world-nuclear.org/NuclearDatabase/Default.aspx?id=27232}}
 
 @webpage{:hc,
 	Date-Added = {2011-01-13 13:33:08 +0100},
@@ -27,9 +317,9 @@
 
 @webpage{:kl,
 	Date-Added = {2011-01-13 13:16:29 +0100},
-	Date-Modified = {2011-01-13 13:16:29 +0100},
+	Date-Modified = {2011-02-01 13:37:26 +0100},
 	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
-	Title = {DOE - Office of Nuclear Energy},
+	Title = {Reattori di quarta generazione},
 	Bdsk-Url-1 = {http://www.ne.doe.gov/geniv/neGenIV1.html}}
 
 @webpage{:oq,
@@ -97,26 +387,20 @@
 	Title = {Generation II reactor - Wikipedia},
 	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Generation_I_reactor}}
 
-@webpage{:zr,
+@webpage{:npt,
 	Date-Added = {2011-01-13 12:33:17 +0100},
-	Date-Modified = {2011-01-13 12:33:17 +0100},
+	Date-Modified = {2011-02-17 10:57:07 +0100},
 	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
 	Title = {Nuclear reactor technology - Wikipedia},
 	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Nuclear_reactor}}
-
-@webpage{:ys,
-	Date-Added = {2011-01-13 12:32:34 +0100},
-	Date-Modified = {2011-01-13 12:32:34 +0100},
-	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
-	Title = {Nuclear fuel - Wikipedia},
-	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Nuclear_fuel}}
 
 @webpage{:vn,
 	Date-Added = {2011-01-13 11:22:18 +0100},
 	Date-Modified = {2011-01-13 11:22:18 +0100},
 	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
 	Title = {Popular Science - Google Books},
-	Bdsk-Url-1 = {http://books.google.it/books?id=0e0F0zivk0gC&lpg=PA68&dq=generation%20nuclear%20reactor%20history&hl=en&pg=PA70#v=onepage&q=generation%20nuclear%20reactor%20history&f=false}}
+	Bdsk-Url-1 = {http://books.google.it/books?id=0e0F0zivk0gC&lpg=PA68&dq=generation%20nuclear%20reactor%20history&hl=en&pg=PA70#v=onepage&q=generation%20nuclear%20reactor%20history&f=false},
+	Bdsk-Url-2 = {http://eands.caltech.edu/articles/LXVI4/gas.html}}
 
 @webpage{:kx,
 	Date-Added = {2011-01-12 13:46:14 +0100},
@@ -125,13 +409,6 @@
 	Title = {Three Mile Island accident - Wikipedia, the free encyclopedia},
 	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Three_Mile_Island_accident}}
 
-@webpage{:fk,
-	Date-Added = {2011-01-12 13:43:05 +0100},
-	Date-Modified = {2011-01-12 13:43:05 +0100},
-	Lastchecked = {mercoled{\`\i} 12 gennaio 2011},
-	Title = {Universit{\`a} degli studi di Pavia - Home},
-	Bdsk-Url-1 = {http://www.unipv.eu/on-line/Home.html}}
-
 @book{bringhurst:2002,
 	Address = {Point Roberts, WA, USA},
 	Author = {Robert Bringhurst},
@@ -139,3 +416,16 @@
 	Series = {Version 2.5},
 	Title = {The Elements of Typographic Style},
 	Year = {2002}}
+
+@article{hinds2006next,
+	Author = {Hinds, D. and Maslak, C.},
+	Date-Modified = {2011-02-22 11:09:10 +0100},
+	Issn = {0029-5574},
+	Journal = {Nuclear News},
+	Number = {1},
+	Pages = {35--40},
+	Publisher = {[La Grange Park, Ill., etc.] American Nuclear Society.},
+	Rating = {3},
+	Title = {{Next-generation nuclear energy: The ESBWR}},
+	Volume = {49},
+	Year = {2006}}
