--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -46,13 +46,13 @@
     %*******************************************************
     % List of Listings
     %*******************************************************      
-	  %\phantomsection 
-    \refstepcounter{dummy}
+	%\phantomsection 
+    %\refstepcounter{dummy}
     %\addcontentsline{toc}{chapter}{\lstlistlistingname}
-    \pdfbookmark[1]{\lstlistlistingname}{lol}
-    \lstlistoflistings 
+    %\pdfbookmark[1]{\lstlistlistingname}{lol}
+    %\lstlistoflistings 
 
-    \vspace*{8ex}
+    %\vspace*{8ex}
        
     %*******************************************************
     % Acronyms
@@ -61,11 +61,40 @@
     \refstepcounter{dummy}
     \pdfbookmark[1]{Acronyms}{acronyms}
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
-    \chapter*{Acronyms}
-    \begin{acronym}[UML]
-        \acro{DRY}{Don't Repeat Yourself}
-        \acro{API}{Application Programming Interface}
-        \acro{UML}{Unified Modeling Language}
+    \chapter*{Acronimi}
+    \begin{acronym}
+    		\acro{4S}{Super Safe, Small and Simple}
+		\acro{ABWR}{Advanced Boiling Water Reactor}
+		\acro{ACR}{Advanced CANDU Reactor}
+		\acro{AECL}{Atomic Energy of Canada Ltd}
+		\acro{AHWR}{Advanced Heavy Water Reactor}
+		\acro{APWR}{Advanced Pressurized Water Reactor}
+		\acro{BWR}{Boiling Water Reactor}
+		\acro{CANDU}{Canadian Deuterium Uranium}
+		\acro{CDF}{Core Damage Frequency}
+		\acro{ECCS}{Emergency Core Cooling System}
+		\acro{EPR}{European Pressurized Reactor}
+		\acro{ESBWR}{Economic Simplified Boiling Water Reactor}
+		\acro{GEN III+}{Reattori di terza generazione avanzata}
+		\acro{GEN III}{Reattori di terza generazione}
+		\acro{IRIS}{International Reactor Innovative and Secure}
+		\acro{LWR}{Light Water Reactor}
+		\acro{MOX}{Mixed Oxide}
+		\acro{NGNP}{Next-Generation Nuclear Plant}
+		\acro{NRC}{united States Nuclear Regulatory Commission}
+		\acro{PBMR}{Pebble Bed Modular Reactor}
+		\acro{PHWR}{Pressurized Heavy Water Reactor}
+		\acro{RCP}{Reactor Coolant Pumps}
+		\acro{RIP}{Reactor Internal Pumps}
+		\acro{RPV}{Reactor Pressure Vessel}
+		\acro{SNERDI}{Shanghai Nuclear Engineering Research \& Design Institute}
+		\acro{SNPTC}{State Nuclear Power Technology Corporation}
+		\acro{SORV}{Safety Overpressure Relief Valves}
+		\acro{US-APWR}{Advanced Pressurized Water Reactor (versione US)}
+		\acro{US-EPR}{European Pressurized Reactor (versione US)}
+		\acro{VVER}{Vodo-Vodyanoi Energetichesky Reactor (Reattore Energetico Acqua-Acqua)}
+		\acro{WNA}{World Nuclear Association}
+    		\acro{PWR}{Pressurized Water Reactor}
     \end{acronym}                     
 \endgroup
 
